Controllers return improvement / Routes extension
