# back/app/routes/commentRoute.js
@@ -2,10 +2,10 @@ const auth = require('../middlewares/auth')
 const admin = require('../middlewares/admin')
 const validation = require('../middlewares/validation')
 const CommentController = require('../controllers/commentController')
-const router = require('express').Router({ mergeParams: true })
+const router = require('express').Router()
 
-router.get('/', auth, CommentController.getAll)
-router.post('/', auth, validation, CommentController.create)
+router.get('/post/:postId', auth, CommentController.getAll)
+router.post('/post/:postId', auth, validation, CommentController.create)
 router.put('/:id', auth, admin, validation, CommentController.update)
 router.delete('/:id', auth, admin, CommentController.delete)
 
